--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.7.8",
+    "blurhash": "^2.0.5",
     "pinia": "^2.2.7",
     "swiper": "^11.1.15",
     "vue": "^3.5.13",
