--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "sweetalert2": "^11.14.5",
     "swiper": "^11.1.15",
     "vue": "^3.5.13",
+    "vue-i18n": "^10.0.5",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
